[hotfix-35379] sonar 扫描解决bug 和漏洞